    - The variables "jaql_prompt", "jaql_indent", "jaql_jars", "jaql_path",
      and "jaql_style" can be used to affect the behavior of the jaql shell
      (these are all documented under "\help jaql").
    - Jsqsh options --jaql-path and --jaql-jars have been added. Use of
      these options implies --jaql.
    - Tab completion will complete any global Jaql variable name.  
* The --debug flag can now be specified multiple times.
* Fixed bug where connection names supplied on the command line
  are not recognized.

Release 1.4
* Added support for "JLine" as an input method. JLine is a pure-java
  (at least on UNIX) library similar to Java-Readline. For portability,
  java-readline will be tried first, if it is unavailable, JLine will
  be used.  This support added the following:
     * --readline command line option to specify the input method.
     * JSQSH_READLINE environment variable can also be used to specify
       the input method.
     * The $readline variable can be used to display the currently
       selected readline implementation.
* Added new options to the \insert command:
     * -t,--terminator=term  Allows you to specify a batch terminator
       other than "go".
     * -m,--multi-row Enables support for platforms that allow multiple
       rows to be specified in a single insert statement.
* Added -n (--repeat) option to \eval allowing the batch of SQL being
  evaluated to be run multiple times.  Each iteration of evaluation
  will have a variable ${iteration} set that it can refer to if it
  wants to vary the SQL behavior by iteration.
* Added new command line option "--config-dir" that allows you to specify
  additional configuration directories to be processed upon start
  in addition to $HOME/.jsqsh. This option may be specified more than
  once to load more than one configuration directory.
* Added new command line option "--drivers" that allows you to specify
  additional driver.xml files to be loaded upon startup. This option